fix selector z-index #846

--- a/styleguide/_layers.scss
+++ b/styleguide/_layers.scss
@@ -2,16 +2,21 @@
 // all view-mode css should specify a z-index between 0 and 999
 // the editor will use the levels above that
 
-@mixin component-toolbar-menu-layer {
+@mixin quick-bar-layer {
   z-index: 1000;
 }
 
-@mixin component-toolbar-layer {
-  z-index: 1010;
+@mixin mini-selector-layer {
+  z-index: 1005;
 }
 
 @mixin inline-form-layer {
-  // must be above mini toolbar
+  // must be above mini selector
+  z-index: 1010;
+}
+
+@mixin expanded-selector-layer {
+  // under the overlay, but above all components and inline forms
   z-index: 1015;
 }
 
